--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,6 +7,14 @@
     android:layout_height="match_parent"
     tools:context=".RegisterActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toolbar_register"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
     <!-- Login progress -->
 
     <EditText
