--- a/app/src/main/res/layout/fragment_plaats_post.xml
+++ b/app/src/main/res/layout/fragment_plaats_post.xml
@@ -3,10 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#4D9CA0"
     android:layout_height="match_parent"
-    tools:context=".PlaatsPostActivity">
+    android:background="#4D9CA0"
+    tools:context=".PlaatsPostFragment">
 
+    <!-- TODO: Update blank fragment layout -->
     <Button
         android:id="@+id/btn_post_submit"
         android:layout_width="200dp"
@@ -40,19 +41,6 @@
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <EditText
-        android:background="@drawable/edit_text_style"
-        android:id="@+id/txt_post_message"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="12dp"
-        android:ems="10"
-        android:hint="Bericht"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline4" />
-
     <Spinner
         android:id="@+id/sp_post_category"
         android:layout_width="300dp"
@@ -67,5 +55,18 @@
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/txt_post_message"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/edit_text_style"
+        android:ems="10"
+        android:hint="Bericht"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline4" />
 
 </android.support.constraint.ConstraintLayout>
