--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,17 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/add"
-        android:title="add"
+        android:title="Add"
         android:icon="@drawable/ic_outline_add_24px"/>
 
     <item
         android:id="@+id/list"
-        android:title="list"
+        android:title="List"
         android:icon="@drawable/ic_outline_dehaze_24px"/>
 
     <item
         android:id="@+id/account"
-        android:title="account"
+        android:title="Account"
         android:icon="@drawable/ic_outline_account_circle_24px"/>
 
 </menu>
