--- a/app/src/main/res/layout/fragment_detail_post.xml
+++ b/app/src/main/res/layout/fragment_detail_post.xml
@@ -39,10 +39,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:text="@{postViewModel.getSelectedPost().owner}"
-                app:layout_constraintEnd_toStartOf="@+id/guideline19"
+                android:text="@{`Geplaatst door `+ postViewModel.getSelectedPost().owner}"
+                app:layout_constraintStart_toStartOf="@+id/guideline16"
                 app:layout_constraintTop_toBottomOf="@+id/txt_detail_text"
                 tools:text="Woltex" />
 
@@ -88,7 +86,7 @@
 
             <TextView
                 android:id="@+id/txt_detail_content"
-                android:layout_width="305dp"
+                android:layout_width="309dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:text="@{postViewModel.getSelectedPost().message}"
@@ -103,11 +101,14 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
+                android:background="@drawable/button_style"
                 android:text="Verwijder je bericht"
+                android:textColor="#fff"
                 app:layout_constraintEnd_toStartOf="@+id/guideline17"
                 app:layout_constraintStart_toStartOf="@+id/guideline16"
                 app:layout_constraintTop_toBottomOf="@+id/txt_detail_content"
-                tools:text="Verwijder je bericht" />
+                tools:text="Verwijder je bericht"
+                android:visibility="@{safeUnbox(postViewModel.isOwnerPost)? View.VISIBLE : View.GONE}"/>
 
 
         </android.support.constraint.ConstraintLayout>
