--- a/app/src/main/res/layout/fragment_plaats_post.xml
+++ b/app/src/main/res/layout/fragment_plaats_post.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#4D9CA0"
-    tools:context=".fragments.PlaatsPostFragment">
+    tools:context=".activities.MainActivity">
 
-    <!-- TODO: Update blank fragment layout -->
     <android.support.constraint.Guideline
         android:id="@+id/guideline14"
         android:layout_width="wrap_content"
@@ -19,13 +19,14 @@
         android:id="@+id/btn_post_submit"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/button_style"
-        android:text="Plaats Bericht"
+        android:text="@string/place_placemessage"
         android:textColor="#fff"
         app:layout_constraintEnd_toStartOf="@+id/guideline14"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline13"
-        app:layout_constraintTop_toBottomOf="@+id/txt_post_message" />
+        app:layout_constraintTop_toTopOf="@+id/guideline21" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline4"
@@ -41,7 +42,7 @@
         android:layout_marginBottom="24dp"
         android:background="@drawable/edit_text_style"
         android:ems="10"
-        android:hint="Titel"
+        android:hint="@string/place_title"
         android:inputType="text|textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/sp_post_category"
         app:layout_constraintEnd_toStartOf="@+id/guideline14"
@@ -61,12 +62,15 @@
     <EditText
         android:id="@+id/txt_post_message"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="0dp"
         android:layout_marginTop="12dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/edit_text_style"
-        android:ems="10"
-        android:hint="Bericht"
-        android:inputType="textPersonName"
+        android:hint="@string/place_message"
+        android:inputType="textMultiLine"
+        android:singleLine="false"
+        android:gravity="top"
+        app:layout_constraintBottom_toTopOf="@+id/guideline21"
         app:layout_constraintEnd_toStartOf="@+id/guideline14"
         app:layout_constraintStart_toStartOf="@+id/guideline13"
         app:layout_constraintTop_toTopOf="@+id/guideline4" />
@@ -77,5 +81,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.10" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline21"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.7" />
 
 </android.support.constraint.ConstraintLayout>
