--- a/app/src/main/res/layout/fragment_detail_post.xml
+++ b/app/src/main/res/layout/fragment_detail_post.xml
@@ -31,6 +31,7 @@
                 android:layout_height="wrap_content"
                 android:text="@{postViewModel.getSelectedPost().title}"
                 android:textSize="30sp"
+                android:textColor="#fff"
                 app:layout_constraintEnd_toStartOf="@+id/guideline17"
                 app:layout_constraintStart_toStartOf="@+id/guideline16"
                 app:layout_constraintTop_toTopOf="@+id/guideline18"
@@ -41,6 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:textColor="#fff"
                 android:text="@{`Geplaatst door `+ postViewModel.getSelectedPost().owner}"
                 app:layout_constraintStart_toStartOf="@+id/guideline16"
                 app:layout_constraintTop_toBottomOf="@+id/txt_detail_text"
@@ -81,6 +83,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
+                android:textColor="#fff"
                 android:text="@{postViewModel.getSelectedPost().date}"
                 app:layout_constraintStart_toStartOf="@+id/guideline19"
                 app:layout_constraintTop_toBottomOf="@+id/txt_detail_text"
@@ -88,10 +91,12 @@
 
             <TextView
                 android:id="@+id/txt_detail_content"
-                android:layout_width="309dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:text="@{postViewModel.getSelectedPost().message}"
+                android:textColor="#fff"
+                android:textSize="20sp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline17"
                 app:layout_constraintHorizontal_bias="0.493"
                 app:layout_constraintStart_toStartOf="@+id/guideline16"
